Contacto3xtrat3rr3str3d/target/generated-sources/antlr4/com/mycompany/C3/grammar/YParser.java
// Generated from com/mycompany/C3/grammar/YParser.g4 by ANTLR 4.13.2
package com.mycompany.C3.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class YParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, COMENTARIO_LINEA=3, COMENTARIO_BLOQUE=4, NEWLINE=5, 
		WS=6, SEC_ESTRUCTURAS=7, SEC_FUNCIONES=8, ESTRUCTURA=9, DEFINIR=10, RETORNAR=11, 
		ENTERO=12, FLOTANTE=13, CADENA=14, CARACTER=15, BOOL=16, VERDADERO=17, 
		FALSO=18, SI=19, ENTONCES=20, SINO=21, CONTRARIO=22, ELEGIR=23, CASO=24, 
		SIEMPRE=25, ROMPER=26, CONTINUAR=27, PARA=28, MIENTRAS=29, HACER=30, IMPRIMIR=31, 
		LEER=32, INCREMENTO=33, DECREMENTO=34, FLECHA=35, IGUAL_IGUAL=36, DIFERENTE=37, 
		MENOR_IGUAL=38, MAYOR_IGUAL=39, MENOR=40, MAYOR=41, AND=42, OR=43, NOT=44, 
		MAS=45, MENOS=46, MULT=47, DIV=48, MOD=49, IGUAL=50, PAR_IZQ=51, PAR_DER=52, 
		COR_IZQ=53, COR_DER=54, LLA_IZQ=55, LLA_DER=56, PUNTO=57, COMA=58, DOSPUNTOS=59, 
		PUNTO_COMA=60, DECIMAL_LIT=61, ENTERO_LIT=62, CADENA_LIT=63, CARACTER_LIT=64, 
		ID=65, ERROR_CHAR=66;
	public static final int
		RULE_programa = 0, RULE_seccionEstructuras = 1, RULE_seccionFunciones = 2, 
		RULE_defEstructura = 3, RULE_campo = 4, RULE_defFuncion = 5, RULE_parametros = 6, 
		RULE_parametro = 7, RULE_bloque = 8, RULE_instruccion = 9, RULE_fin = 10, 
		RULE_declaracion = 11, RULE_dimension = 12, RULE_inicializador = 13, RULE_asignacion = 14, 
		RULE_incremento = 15, RULE_acceso = 16, RULE_sufijo = 17, RULE_llamada = 18, 
		RULE_argumentos = 19, RULE_condicional = 20, RULE_sinoSi = 21, RULE_contrario = 22, 
		RULE_seleccion = 23, RULE_caso = 24, RULE_casoDefecto = 25, RULE_cuerpoCaso = 26, 
		RULE_cicloPara = 27, RULE_inicioPara = 28, RULE_actualizacionPara = 29, 
		RULE_cicloMientras = 30, RULE_cicloHacer = 31, RULE_expr = 32, RULE_literal = 33, 
		RULE_tipo = 34, RULE_tipoPrimitivo = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccionEstructuras", "seccionFunciones", "defEstructura", 
			"campo", "defFuncion", "parametros", "parametro", "bloque", "instruccion", 
			"fin", "declaracion", "dimension", "inicializador", "asignacion", "incremento", 
			"acceso", "sufijo", "llamada", "argumentos", "condicional", "sinoSi", 
			"contrario", "seleccion", "caso", "casoDefecto", "cuerpoCaso", "cicloPara", 
			"inicioPara", "actualizacionPara", "cicloMientras", "cicloHacer", "expr", 
			"literal", "tipo", "tipoPrimitivo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'%estructuras'", "'%funciones'", 
			"'estructura'", "'definir'", "'retornar'", "'entero'", "'flotante'", 
			"'cadena'", "'caracter'", "'bool'", "'verdadero'", "'falso'", "'si'", 
			"'entonces'", "'sino'", "'contrario'", "'elegir'", "'caso'", "'siempre'", 
			"'romper'", "'continuar'", "'para'", "'mientras'", "'hacer'", "'imprimir'", 
			"'leer'", "'++'", "'--'", "'->'", "'=='", "'!='", "'<='", "'>='", "'<'", 
			"'>'", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "NEWLINE", 
			"WS", "SEC_ESTRUCTURAS", "SEC_FUNCIONES", "ESTRUCTURA", "DEFINIR", "RETORNAR", 
			"ENTERO", "FLOTANTE", "CADENA", "CARACTER", "BOOL", "VERDADERO", "FALSO", 
			"SI", "ENTONCES", "SINO", "CONTRARIO", "ELEGIR", "CASO", "SIEMPRE", "ROMPER", 
			"CONTINUAR", "PARA", "MIENTRAS", "HACER", "IMPRIMIR", "LEER", "INCREMENTO", 
			"DECREMENTO", "FLECHA", "IGUAL_IGUAL", "DIFERENTE", "MENOR_IGUAL", "MAYOR_IGUAL", 
			"MENOR", "MAYOR", "AND", "OR", "NOT", "MAS", "MENOS", "MULT", "DIV", 
			"MOD", "IGUAL", "PAR_IZQ", "PAR_DER", "COR_IZQ", "COR_DER", "LLA_IZQ", 
			"LLA_DER", "PUNTO", "COMA", "DOSPUNTOS", "PUNTO_COMA", "DECIMAL_LIT", 
			"ENTERO_LIT", "CADENA_LIT", "CARACTER_LIT", "ID", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SeccionFuncionesContext seccionFunciones() {
			return getRuleContext(SeccionFuncionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YParser.EOF, 0); }
		public SeccionEstructurasContext seccionEstructuras() {
			return getRuleContext(SeccionEstructurasContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEC_ESTRUCTURAS) {
				{
				setState(72);
				seccionEstructuras();
				}
			}

			setState(75);
			seccionFunciones();
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionEstructurasContext extends ParserRuleContext {
		public TerminalNode SEC_ESTRUCTURAS() { return getToken(YParser.SEC_ESTRUCTURAS, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public List<DefEstructuraContext> defEstructura() {
			return getRuleContexts(DefEstructuraContext.class);
		}
		public DefEstructuraContext defEstructura(int i) {
			return getRuleContext(DefEstructuraContext.class,i);
		}
		public SeccionEstructurasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionEstructuras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterSeccionEstructuras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitSeccionEstructuras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitSeccionEstructuras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionEstructurasContext seccionEstructuras() throws RecognitionException {
		SeccionEstructurasContext _localctx = new SeccionEstructurasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccionEstructuras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(SEC_ESTRUCTURAS);
			setState(79);
			match(NEWLINE);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESTRUCTURA) {
				{
				{
				setState(80);
				defEstructura();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionFuncionesContext extends ParserRuleContext {
		public TerminalNode SEC_FUNCIONES() { return getToken(YParser.SEC_FUNCIONES, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public List<DefFuncionContext> defFuncion() {
			return getRuleContexts(DefFuncionContext.class);
		}
		public DefFuncionContext defFuncion(int i) {
			return getRuleContext(DefFuncionContext.class,i);
		}
		public SeccionFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterSeccionFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitSeccionFunciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitSeccionFunciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionFuncionesContext seccionFunciones() throws RecognitionException {
		SeccionFuncionesContext _localctx = new SeccionFuncionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seccionFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(SEC_FUNCIONES);
			setState(87);
			match(NEWLINE);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINIR) {
				{
				{
				setState(88);
				defFuncion();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefEstructuraContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURA() { return getToken(YParser.ESTRUCTURA, 0); }
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(YParser.DOSPUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YParser.DEDENT, 0); }
		public List<CampoContext> campo() {
			return getRuleContexts(CampoContext.class);
		}
		public CampoContext campo(int i) {
			return getRuleContext(CampoContext.class,i);
		}
		public DefEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterDefEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitDefEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitDefEstructura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefEstructuraContext defEstructura() throws RecognitionException {
		DefEstructuraContext _localctx = new DefEstructuraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defEstructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(ESTRUCTURA);
			setState(95);
			match(ID);
			setState(96);
			match(DOSPUNTOS);
			setState(97);
			match(NEWLINE);
			setState(98);
			match(INDENT);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				campo();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 12)) & ~0x3f) == 0 && ((1L << (_la - 12)) & 9007199254741023L) != 0) );
			setState(104);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CampoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public FinContext fin() {
			return getRuleContext(FinContext.class,0);
		}
		public List<DimensionContext> dimension() {
			return getRuleContexts(DimensionContext.class);
		}
		public DimensionContext dimension(int i) {
			return getRuleContext(DimensionContext.class,i);
		}
		public CampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterCampo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitCampo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitCampo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CampoContext campo() throws RecognitionException {
		CampoContext _localctx = new CampoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_campo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			tipo();
			setState(107);
			match(ID);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COR_IZQ) {
				{
				{
				setState(108);
				dimension();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			fin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefFuncionContext extends ParserRuleContext {
		public TerminalNode DEFINIR() { return getToken(YParser.DEFINIR, 0); }
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode PAR_IZQ() { return getToken(YParser.PAR_IZQ, 0); }
		public TerminalNode PAR_DER() { return getToken(YParser.PAR_DER, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(YParser.DOSPUNTOS, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode FLECHA() { return getToken(YParser.FLECHA, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterDefFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitDefFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitDefFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefFuncionContext defFuncion() throws RecognitionException {
		DefFuncionContext _localctx = new DefFuncionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defFuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(DEFINIR);
			setState(117);
			match(ID);
			setState(118);
			match(PAR_IZQ);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 45035996273831936L) != 0)) {
				{
				setState(119);
				parametros();
				}
			}

			setState(122);
			match(PAR_DER);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FLECHA) {
				{
				setState(123);
				match(FLECHA);
				setState(124);
				tipo();
				}
			}

			setState(127);
			match(DOSPUNTOS);
			setState(128);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(YParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(YParser.COMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitParametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			parametro();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(131);
				match(COMA);
				setState(132);
				parametro();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
	 
		public ParametroContext() { }
		public void copyFrom(ParametroContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParamValorContext extends ParametroContext {
		public TipoPrimitivoContext tipoPrimitivo() {
			return getRuleContext(TipoPrimitivoContext.class,0);
		}
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public ParamValorContext(ParametroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterParamValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitParamValor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitParamValor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParamEstructuraContext extends ParametroContext {
		public TerminalNode LLA_IZQ() { return getToken(YParser.LLA_IZQ, 0); }
		public TerminalNode LLA_DER() { return getToken(YParser.LLA_DER, 0); }
		public List<TerminalNode> ID() { return getTokens(YParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(YParser.ID, i);
		}
		public ParamEstructuraContext(ParametroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterParamEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitParamEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitParamEstructura(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParamArregloContext extends ParametroContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public List<TerminalNode> COR_IZQ() { return getTokens(YParser.COR_IZQ); }
		public TerminalNode COR_IZQ(int i) {
			return getToken(YParser.COR_IZQ, i);
		}
		public List<TerminalNode> COR_DER() { return getTokens(YParser.COR_DER); }
		public TerminalNode COR_DER(int i) {
			return getToken(YParser.COR_DER, i);
		}
		public ParamArregloContext(ParametroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterParamArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitParamArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitParamArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parametro);
		int _la;
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COR_IZQ:
				_localctx = new ParamArregloContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(138);
					match(COR_IZQ);
					setState(139);
					match(COR_DER);
					}
					}
					setState(142); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==COR_IZQ );
				setState(144);
				tipo();
				setState(145);
				match(ID);
				}
				break;
			case LLA_IZQ:
				_localctx = new ParamEstructuraContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				match(LLA_IZQ);
				setState(148);
				match(LLA_DER);
				setState(149);
				match(ID);
				setState(150);
				match(ID);
				}
				break;
			case ENTERO:
			case FLOTANTE:
			case CADENA:
			case CARACTER:
			case BOOL:
				_localctx = new ParamValorContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				tipoPrimitivo();
				setState(152);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
